商品、部门、商品分类

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -21,7 +21,7 @@
       "LifeScope":0
     },{
       "FromName":"PurocumentLib.Service.IGoodsClass,PurocumentLib",
-      "ToName":"PurocumentLib.Service.GoodsClass,PurocumentLib",
+      "ToName":"PurocumentLib.Service.GoodsClassService,PurocumentLib",
       "LifeScope":0
     },{
       "FromName":"PurocumentLib.Service.IGoodsService,PurocumentLib",
@@ -43,6 +43,34 @@
     },{
       "FromName":"PurocumentLib.Message.Request.CreatePurocumentPlanRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.CreatePurocumentPlanHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.AddGoodsClassRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.AddGoodsClassHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.UpdateGoodsClassRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.UpdateGoodsClassHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.GoodsClassDisableRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.GoodsClassDisableHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.AddDepartmentRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.AddDepartmentHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.UpdateDepartmentRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.UpdateDepartmentHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.UpdateGoodsRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.UpdateGoodsHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
       "LifeScope":0
     }]
 }
