供应商操作

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -72,5 +72,17 @@
       "FromName":"PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
       "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.AddVendorRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.AddVendorHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.UpdateVendorRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.UpdateVendorHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
+      "LifeScope":0
     }]
 }
