--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -84,5 +84,9 @@
       "FromName":"PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
       "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.GetVendorRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.GetVendorHandler,PurocumentLib",
+      "LifeScope":0
     }]
 }
