跨域及配置文件

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -88,5 +88,9 @@
       "FromName":"PurocumentLib.Message.Request.GetVendorRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.GetVendorHandler,PurocumentLib",
       "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.UpdatePurocumentPlanRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.UpdatePurocumentPlanHandler,PurocumentLib",
+      "LifeScope":0
     }]
 }
