采购计划提交

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -92,5 +92,9 @@
       "FromName":"PurocumentLib.Message.Request.UpdatePurocumentPlanRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.UpdatePurocumentPlanHandler,PurocumentLib",
       "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.SubmitPlanRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.SubmitPlanHandler,PurocumentLib",
+      "LifeScope":0
     }]
 }
