采购计划初审

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -35,6 +35,10 @@
       "FromName":"PurocumentLib.Service.IUnitService,PurocumentLib",
       "ToName":"PurocumentLib.Service.UnitService,PurocumentLib",
       "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Service.IPurchasingAuditService,PurocumentLib",
+      "ToName":"PurocumentLib.Dbcontext.PurchasingAuditService,PurocumentLib",
+      "LifeScope":0
     }],
     "Handler":[{
       "FromName":"PurocumentLib.Message.Request.AddGoodsRequest,PurocumentLib",
@@ -95,6 +99,10 @@
     },{
       "FromName":"PurocumentLib.Message.Request.SubmitPlanRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.SubmitPlanHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.PlanAuditRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.PlanAuditHandler,PurocumentLib",
       "LifeScope":0
     }]
 }
