--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ PurocumentLib/obj/Debug/netstandard2.0/project.razor.json
 *.cache
 PurocumentAPI/bin/Debug/netcoreapp2.1/PurocumentLib.dll
 PurocumentAPI/bin/Debug/netcoreapp2.1/PurocumentLib.pdb
+*.dll
