供应商报价

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -39,6 +39,10 @@
       "FromName":"PurocumentLib.Service.IPurchasingAuditService,PurocumentLib",
       "ToName":"PurocumentLib.Dbcontext.PurchasingAuditService,PurocumentLib",
       "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Service.IQuoteService,PurocumentLib",
+      "ToName":"PurocumentLib.Dbcontext.QuoteService,PurocumentLib",
+      "LifeScope":0
     }],
     "Handler":[{
       "FromName":"PurocumentLib.Message.Request.AddGoodsRequest,PurocumentLib",
@@ -103,6 +107,18 @@
     },{
       "FromName":"PurocumentLib.Message.Request.PlanAuditRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.PlanAuditHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.IGetQuoteRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.GetQuoteHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.IAddQuoteRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.AddQuoteHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.IUpdateQuoteRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.UpdateQuoteHandler,PurocumentLib",
       "LifeScope":0
     }]
 }
