采购计划确认供应商

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -37,11 +37,11 @@
       "LifeScope":0
     },{
       "FromName":"PurocumentLib.Service.IPurchasingAuditService,PurocumentLib",
-      "ToName":"PurocumentLib.Dbcontext.PurchasingAuditService,PurocumentLib",
+      "ToName":"PurocumentLib.Service.PurchasingAuditService,PurocumentLib",
       "LifeScope":0
     },{
       "FromName":"PurocumentLib.Service.IQuoteService,PurocumentLib",
-      "ToName":"PurocumentLib.Dbcontext.QuoteService,PurocumentLib",
+      "ToName":"PurocumentLib.Service.QuoteService,PurocumentLib",
       "LifeScope":0
     }],
     "Handler":[{
@@ -109,16 +109,24 @@
       "ToName":"PurocumentLib.Message.Handler.PlanAuditHandler,PurocumentLib",
       "LifeScope":0
     },{
-      "FromName":"PurocumentLib.Message.Request.IGetQuoteRequest,PurocumentLib",
+      "FromName":"PurocumentLib.Message.Request.GetQuoteRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.GetQuoteHandler,PurocumentLib",
       "LifeScope":0
     },{
-      "FromName":"PurocumentLib.Message.Request.IAddQuoteRequest,PurocumentLib",
+      "FromName":"PurocumentLib.Message.Request.AddQuoteRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.AddQuoteHandler,PurocumentLib",
       "LifeScope":0
     },{
-      "FromName":"PurocumentLib.Message.Request.IUpdateQuoteRequest,PurocumentLib",
+      "FromName":"PurocumentLib.Message.Request.UpdateQuoteRequest,PurocumentLib",
       "ToName":"PurocumentLib.Message.Handler.UpdateQuoteHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.CalVendorQuoteTotalRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.CalVendorQuoteTotalHandler,PurocumentLib",
+      "LifeScope":0
+    },{
+      "FromName":"PurocumentLib.Message.Request.ConfirmPlanVendorRequest,PurocumentLib",
+      "ToName":"PurocumentLib.Message.Handler.ConfirmPlanVendorHandler,PurocumentLib",
       "LifeScope":0
     }]
 }
