--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -11,122 +11,218 @@
     "LifeScope":0,
     "ConstructorParams":["Data Source=F:\\Develop\\yingujiudianEF\\Database\\test.db"]
   }],
-  "Service":[{
-    "FromName":"PurocumentLib.Service.IBizTypeService,PurocumentLib",
-    "ToName":"PurocumentLib.Service.BizTypeService,PurocumentLib",
-    "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IDepartmentService,PurocumentLib",
-      "ToName":"PurocumentLib.Service.DepartmentService,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IGoodsClass,PurocumentLib",
-      "ToName":"PurocumentLib.Service.GoodsClassService,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IGoodsService,PurocumentLib",
-      "ToName":"PurocumentLib.Service.GoodsService,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IPurchasingplanService,PurocumentLib",
-      "ToName":"PurocumentLib.Service.PurchasingplanService,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IUnitService,PurocumentLib",
-      "ToName":"PurocumentLib.Service.UnitService,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IPurchasingAuditService,PurocumentLib",
-      "ToName":"PurocumentLib.Service.PurchasingAuditService,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Service.IQuoteService,PurocumentLib",
-      "ToName":"PurocumentLib.Service.QuoteService,PurocumentLib",
-      "LifeScope":0
-    }],
-    "Handler":[{
-      "FromName":"PurocumentLib.Message.Request.AddGoodsRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.AddGoodsHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.CreatePurocumentPlanRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.CreatePurocumentPlanHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.AddGoodsClassRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.AddGoodsClassHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.UpdateGoodsClassRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.UpdateGoodsClassHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.GoodsClassDisableRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.GoodsClassDisableHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.AddDepartmentRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.AddDepartmentHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.UpdateDepartmentRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.UpdateDepartmentHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.UpdateGoodsRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.UpdateGoodsHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.AddVendorRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.AddVendorHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.UpdateVendorRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.UpdateVendorHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.GetVendorRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.GetVendorHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.UpdatePurocumentPlanRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.UpdatePurocumentPlanHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.SubmitPlanRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.SubmitPlanHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.PlanAuditRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.PlanAuditHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.GetQuoteRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.GetQuoteHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.AddQuoteRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.AddQuoteHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.UpdateQuoteRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.UpdateQuoteHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.CalVendorQuoteTotalRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.CalVendorQuoteTotalHandler,PurocumentLib",
-      "LifeScope":0
-    },{
-      "FromName":"PurocumentLib.Message.Request.ConfirmPlanVendorRequest,PurocumentLib",
-      "ToName":"PurocumentLib.Message.Handler.ConfirmPlanVendorHandler,PurocumentLib",
-      "LifeScope":0
-    }]
+  "Service": [
+    {
+      "FromName": "PurocumentLib.Service.IBizTypeService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.BizTypeService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IDepartmentService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.DepartmentService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IRoleService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.RoleService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IUsrService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.UsrService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IVendorService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.VendorService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IGoodsClass,PurocumentLib",
+      "ToName": "PurocumentLib.Service.GoodsClassService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IGoodsService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.GoodsService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IPurchasingplanService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.PurchasingplanService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IUnitService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.UnitService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IPurchasingAuditService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.PurchasingAuditService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IQuoteService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.QuoteService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IPurchasingOrderService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.PurchasingOrderService,PurocumentLib",
+      "LifeScope": 0
+    }
+  ],
+  "Handler": [
+    {
+      "FromName": "PurocumentLib.Message.Request.AddGoodsRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddGoodsHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.CreatePurocumentPlanRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.CreatePurocumentPlanHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddGoodsClassRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddGoodsClassHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateGoodsClassRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateGoodsClassHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.GoodsClassDisableRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.GoodsClassDisableHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddDepartmentRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddDepartmentHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateDepartmentRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateDepartmentHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateGoodsRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateGoodsHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddVendorRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddVendorHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateVendorRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateVendorHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.GetVendorRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.GetVendorHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdatePurocumentPlanRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdatePurocumentPlanHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.SubmitPlanRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.SubmitPlanHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.PlanAuditRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.PlanAuditHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.PlanAudit2Request,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.PlanAudit2Handler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.GetQuoteRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.GetQuoteHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddQuoteRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddQuoteHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateQuoteRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateQuoteHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.CalVendorQuoteTotalRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.CalVendorQuoteTotalHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ConfirmPlanVendorRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ConfirmPlanVendorHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddUsrRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddUsrHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateUsrRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateUsrHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddRoleRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddUsrHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.UpdateRoleRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateUsrHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ComfirmOrderRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ComfirmOrderHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ComfirmDeliveryRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ComfirmDeliveryHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ComfirmStockInRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ComfirmStockInHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.CheckInRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.CheckInHandler,PurocumentLib",
+      "LifeScope": 0
+    }
+  ]
 }
