--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -9,7 +9,7 @@
     "FromName":"PurocumentLib.Dbcontext.IPurocumentDbcontext,PurocumentLib",
     "ToName":"PurocumentLib.Dbcontext.PurocumentDbcontext,PurocumentLib",
     "LifeScope":0,
-    "ConstructorParams":["Data Source=F:\\Develop\\yingujiudianEF\\Database\\test.db"]
+    "ConstructorParams":["Data Source=D:\\test.db"]
   }],
   "Service": [
     {
@@ -38,7 +38,7 @@
       "LifeScope": 0
     },
     {
-      "FromName": "PurocumentLib.Service.IGoodsClass,PurocumentLib",
+      "FromName": "PurocumentLib.Service.IGoodsClassService,PurocumentLib",
       "ToName": "PurocumentLib.Service.GoodsClassService,PurocumentLib",
       "LifeScope": 0
     },
