--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -223,6 +223,11 @@
       "FromName": "PurocumentLib.Message.Request.CheckInRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.CheckInHandler,PurocumentLib",
       "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.GetVendorRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.GetVendorHandler,PurocumentLib",
+      "LifeScope": 0
     }
   ]
 }
