--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -9,7 +9,7 @@
     "FromName":"PurocumentLib.Dbcontext.IPurocumentDbcontext,PurocumentLib",
     "ToName":"PurocumentLib.Dbcontext.PurocumentDbcontext,PurocumentLib",
     "LifeScope":0,
-    "ConstructorParams":["Data Source=D:\\test.db"]
+    "ConstructorParams": [ "Data Source=C:\\Users\\Administrator\\Source\\Repos\\20181201\\yingujiudianNetCoreSQL\\WebAPI_SQL\\WebAPI_SQL\\DB\\test.db" ]
   }],
   "Service": [
     {
