增加按id\wechatid查询用户的接口、实现

--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -48,13 +48,13 @@
       "LifeScope": 0
     },
     {
-      "FromName": "PurocumentLib.Service.IPurchasingplanService,PurocumentLib",
-      "ToName": "PurocumentLib.Service.PurchasingplanService,PurocumentLib",
+      "FromName": "PurocumentLib.Service.IUnitService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.UnitService,PurocumentLib",
       "LifeScope": 0
     },
     {
-      "FromName": "PurocumentLib.Service.IUnitService,PurocumentLib",
-      "ToName": "PurocumentLib.Service.UnitService,PurocumentLib",
+      "FromName": "PurocumentLib.Service.IPurchasingplanService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.PurchasingplanService,PurocumentLib",
       "LifeScope": 0
     },
     {
@@ -130,11 +130,6 @@
       "LifeScope": 0
     },
     {
-      "FromName": "PurocumentLib.Message.Request.DisableGoodsRequest,PurocumentLib",
-      "ToName": "PurocumentLib.Message.Handler.DisableGoodsHandler,PurocumentLib",
-      "LifeScope": 0
-    },
-    {
       "FromName": "PurocumentLib.Message.Request.GetVendorRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.GetVendorHandler,PurocumentLib",
       "LifeScope": 0
@@ -190,18 +185,23 @@
       "LifeScope": 0
     },
     {
+      "FromName": "PurocumentLib.Message.Request.GetUsrRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.GetUsrHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
       "FromName": "PurocumentLib.Message.Request.UpdateUsrRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.UpdateUsrHandler,PurocumentLib",
       "LifeScope": 0
     },
     {
       "FromName": "PurocumentLib.Message.Request.AddRoleRequest,PurocumentLib",
-      "ToName": "PurocumentLib.Message.Handler.AddUsrHandler,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddRoleHandler,PurocumentLib",
       "LifeScope": 0
     },
     {
       "FromName": "PurocumentLib.Message.Request.UpdateRoleRequest,PurocumentLib",
-      "ToName": "PurocumentLib.Message.Handler.UpdateUsrHandler,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.UpdateRoleHandler,PurocumentLib",
       "LifeScope": 0
     },
     {
