--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -9,7 +9,7 @@
     "FromName":"PurocumentLib.Dbcontext.IPurocumentDbcontext,PurocumentLib",
     "ToName":"PurocumentLib.Dbcontext.PurocumentDbcontext,PurocumentLib",
     "LifeScope":0,
-    "ConstructorParams": [ "Data Source=/root/test.db" ]
+    "ConstructorParams": [ "Data Source=C:\\Users\\Juan\\Desktop\\test.db" ]
   }],
   "Service": [
     {
