--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -238,6 +238,11 @@
       "FromName": "PurocumentLib.Message.Request.ImportQuotesRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.ImportQuotesHandler,PurocumentLib",
       "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.PlanAudit3Request,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.PlanAudit3Handler,PurocumentLib",
+      "LifeScope": 0
     }
   ]
 }
