--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -68,6 +68,11 @@
       "LifeScope": 0
     },
     {
+      "FromName": "PurocumentLib.Service.IQuoteAuditService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.QuoteAuditService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
       "FromName": "PurocumentLib.Service.IPurchasingOrderService,PurocumentLib",
       "ToName": "PurocumentLib.Service.PurchasingOrderService,PurocumentLib",
       "LifeScope": 0
@@ -155,6 +160,21 @@
       "LifeScope": 0
     },
     {
+      "FromName": "PurocumentLib.Message.Request.PlanAudit3Request,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.PlanAudit3Handler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.QuoteAuditRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.QuoteAuditHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.QuoteAudit2Request,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.QuoteAudit2Handler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
       "FromName": "PurocumentLib.Message.Request.GetQuoteRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.GetQuoteHandler,PurocumentLib",
       "LifeScope": 0
@@ -237,11 +257,6 @@
     {
       "FromName": "PurocumentLib.Message.Request.ImportQuotesRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.ImportQuotesHandler,PurocumentLib",
-      "LifeScope": 0
-    },
-    {
-      "FromName": "PurocumentLib.Message.Request.PlanAudit3Request,PurocumentLib",
-      "ToName": "PurocumentLib.Message.Handler.PlanAudit3Handler,PurocumentLib",
       "LifeScope": 0
     }
   ]
