--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -76,6 +76,11 @@
       "FromName": "PurocumentLib.Service.IPurchasingOrderService,PurocumentLib",
       "ToName": "PurocumentLib.Service.PurchasingOrderService,PurocumentLib",
       "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IDepotService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.DepotService,PurocumentLib",
+      "LifeScope": 0
     }
   ],
   "Handler": [
@@ -257,6 +262,11 @@
     {
       "FromName": "PurocumentLib.Message.Request.ImportQuotesRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.ImportQuotesHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.StockCheckRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.StockCheckHandler,PurocumentLib",
       "LifeScope": 0
     }
   ]
