--- a/PurocumentAPI/PurocumentAPI.csproj
+++ b/PurocumentAPI/PurocumentAPI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\PuchasingAudit2Controller.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
     <Folder Include="template\" />
   </ItemGroup>
