--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -268,6 +268,26 @@
       "FromName": "PurocumentLib.Message.Request.StockCheckRequest,PurocumentLib",
       "ToName": "PurocumentLib.Message.Handler.StockCheckHandler,PurocumentLib",
       "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.AddChargeBackRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddChargeHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ChargeBackAuditRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ChargeBackAuditHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ChargeBackVerdorComfirmRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ChargeBackVerdorComfirmHandler,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Message.Request.ChargeBackFinishRequest,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.ChargeBackFinishHandler,PurocumentLib",
+      "LifeScope": 0
     }
   ]
 }
