--- a/PurocumentAPI/appsettings.json
+++ b/PurocumentAPI/appsettings.json
@@ -81,6 +81,16 @@
       "FromName": "PurocumentLib.Service.IDepotService,PurocumentLib",
       "ToName": "PurocumentLib.Service.DepotService,PurocumentLib",
       "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IPermissionService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.PermissionService,PurocumentLib",
+      "LifeScope": 0
+    },
+    {
+      "FromName": "PurocumentLib.Service.IChargeBackService,PurocumentLib",
+      "ToName": "PurocumentLib.Service.ChargeBackService,PurocumentLib",
+      "LifeScope": 0
     }
   ],
   "Handler": [
@@ -271,7 +281,7 @@
     },
     {
       "FromName": "PurocumentLib.Message.Request.AddChargeBackRequest,PurocumentLib",
-      "ToName": "PurocumentLib.Message.Handler.AddChargeHandler,PurocumentLib",
+      "ToName": "PurocumentLib.Message.Handler.AddChargeBackHandler,PurocumentLib",
       "LifeScope": 0
     },
     {
